refactor(funds): 收口账务写入与动作事实契约
统一账务装配、写入与余额投影边界，将支付工具和支出控制内部请求归位到 transaction 实现层。补齐资金动作已入账证据查询及清算账务闭合契约，并同步四层设计、API baseline、Swagger 中文描述和文档链接。

验证：Corretto 21.0.11 下 just verify-cad 通过；Surefire 1200 tests、0 failures、0 errors、1 skipped；PMD、Core API baseline、公开契约、classfile 和 codegen 检查通过。MySQL destructive 用例因缺少 WIND_FUNDS_TEST_MYSQL_DESTRUCTIVE 跳过。

Assisted-by: GPT-5 via Codex